--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
       TEMPLATE_ID: ${{ secrets.TEMPLATE_ID }}
       USER_ID: ${{ secrets.USER_ID }}
       START_DATE: ${{ secrets.START_DATE }}
-      BIRTHDAY: ${{ secrets.BIRTHDAY }}
-      CITY: ${{ secrets.CITY }}
+      BIRTHDAY1: ${{ secrets.BIRTHDAY }}
+      BIRTHDAY2: ${{ secrets.BIRTHDAY }} 
+      CITY: ${{ secrets.CITY }} 
